map zoom, stretch img bug fix

--- a/frontend/src/components/Skateparks/SingleSkatePark/single-skatepark.css
+++ b/frontend/src/components/Skateparks/SingleSkatePark/single-skatepark.css
@@ -591,4 +591,8 @@
   .forecast-temps {
     font-size: 10px;
   }
+  .park-main-img {
+    height: 100%;
+    width: auto;
+  }
 }
